--- a/app/src/main/res/layout/chat_in_item.xml
+++ b/app/src/main/res/layout/chat_in_item.xml
@@ -10,13 +10,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_in_bubble"
-        android:lineSpacingExtra="2dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="4dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
+        android:lineSpacingExtra="@dimen/min_padding"
+        android:paddingStart="@dimen/big_padding"
+        android:paddingTop="@dimen/small_padding"
+        android:paddingEnd="@dimen/medium_padding"
+        android:paddingBottom="@dimen/medium_padding"
+        android:layout_marginTop="@dimen/small_padding"
+        android:layout_marginBottom="@dimen/small_padding"
+        android:textSize="@dimen/big_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="wrap"
