--- a/app/src/main/res/layout/chat_out_item.xml
+++ b/app/src/main/res/layout/chat_out_item.xml
@@ -3,20 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="@dimen/big_padding">
 
     <TextView
         android:id="@+id/incoming_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_out_bubble"
-        android:lineSpacingExtra="2dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="4dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
+        android:lineSpacingExtra="@dimen/min_padding"
+        android:paddingStart="@dimen/medium_padding"
+        android:paddingTop="@dimen/small_padding"
+        android:paddingEnd="@dimen/big_padding"
+        android:paddingBottom="@dimen/medium_padding"
+        android:layout_marginTop="@dimen/small_padding"
+        android:layout_marginBottom="@dimen/small_padding"
+        android:textSize="@dimen/big_text"
         android:textAlignment="viewEnd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
