--- a/app/src/main/res/drawable/background_gradient45.xml
+++ b/app/src/main/res/drawable/background_gradient45.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/dark"
-        android:endColor="@color/medium"
+        android:startColor="@color/background1"
+        android:endColor="@color/background2"
         android:angle="45" />
 </shape>
