--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/medium" />
+    <solid android:color="@color/background3" />
     <stroke
         android:width="1dp"
-        android:color="@color/light" />
+        android:color="@color/background8" />
 </shape>
