--- a/app/src/main/res/drawable/icon_send.xml
+++ b/app/src/main/res/drawable/icon_send.xml
@@ -1,5 +1,12 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="30dp"
+    android:viewportHeight="30"
+    android:viewportWidth="30"
+    android:width="30dp">
+
+    <path
+        android:fillColor="@color/iconColor"
+        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
     
 </vector>
