--- a/app/src/main/res/drawable/rounded_up_rectangle.xml
+++ b/app/src/main/res/drawable/rounded_up_rectangle.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/medium" />
+        android:color="@color/background3" />
     <corners
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp" />
