--- a/app/src/main/res/drawable/settings_background_gradient.xml
+++ b/app/src/main/res/drawable/settings_background_gradient.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/darkAccent"
-        android:endColor="@color/mediumAccent"
+        android:startColor="@color/accent8"
+        android:endColor="@color/accent6"
         android:angle="90" />
 </shape>
