--- a/app/src/main/res/drawable/shape_in_bubble.xml
+++ b/app/src/main/res/drawable/shape_in_bubble.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--Shadow Layers-->
+<!--    Shadow Layers
 
     <item>
         <rotate
@@ -15,7 +15,7 @@
                     android:bottom="1px"
                     android:left="1px"
                     android:right="1px"/>
-                <solid android:color="#01000000" />
+                <solid android:color="@color/transparent_shadow_color" />
             </shape>
         </rotate>
     </item>
@@ -25,12 +25,12 @@
                 android:bottom="1px"
                 android:left="1px"
                 android:right="1px"/>
-            <solid android:color="#01000000" />
+            <solid android:color="@color/transparent_shadow_color" />
             <corners android:radius="8dp" />
         </shape>
     </item>
 
-    <!--===============-->
+    ===============
     <item>
         <rotate
             android:fromDegrees="-35"
@@ -41,7 +41,7 @@
                 <corners android:radius="4dp"/>
                 <padding
                     android:bottom="1px" />
-                <solid android:color="#09000000" />
+                <solid android:color="@color/semitransparent_shadow_color" />
             </shape>
         </rotate>
     </item>
@@ -49,12 +49,12 @@
         <shape android:shape="rectangle">
             <padding
                 android:bottom="1px" />
-            <solid android:color="#09000000" />
+            <solid android:color="@color/semitransparent_shadow_color" />
             <corners android:radius="8dp" />
         </shape>
     </item>
 
-    <!--===============-->
+    ===============
 
     <item>
         <rotate
@@ -68,7 +68,7 @@
                     android:bottom="1px"
                     android:left="1px"
                     android:right="1px"/>
-                <solid android:color="#10000000" />
+                <solid android:color="@color/least_transparent_shadow_color" />
             </shape>
         </rotate>
     </item>
@@ -78,12 +78,12 @@
                 android:bottom="1px"
                 android:left="1px"
                 android:right="1px"/>
-            <solid android:color="#10000000" />
+            <solid android:color="@color/least_transparent_shadow_color" />
             <corners android:radius="8dp" />
         </shape>
     </item>
 
-    <!--ForeGround-->
+    ForeGround-->
 
     <item>
         <rotate
@@ -92,15 +92,15 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <corners android:radius="4dp"/>
-                <solid android:color="@color/white" />
+<!--                <corners android:radius="4dp"/>-->
+                <solid android:color="@color/accent1" />
             </shape>
         </rotate>
     </item>
-    <item android:left="8dp">
+    <item android:left="@dimen/medium_padding">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
-            <corners android:radius="8dp" />
+            <solid android:color="@color/accent1" />
+            <corners android:radius="@dimen/medium_padding" />
         </shape>
     </item>
 
