--- a/app/src/main/res/drawable/shape_out_bubble.xml
+++ b/app/src/main/res/drawable/shape_out_bubble.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--Shadow Layer-->
+<!--    Shadow Layer
 
     <item>
         <rotate
@@ -15,7 +15,7 @@
                     android:bottom="1px"
                     android:left="1px"
                     android:right="1px" />
-                <solid android:color="#01000000" />
+                <solid android:color="@color/transparent_shadow_color" />
             </shape>
         </rotate>
     </item>
@@ -26,11 +26,11 @@
                 android:bottom="1px"
                 android:left="1px"
                 android:right="1px" />
-            <solid android:color="#01000000" />
+            <solid android:color="@color/transparent_shadow_color" />
         </shape>
     </item>
 
-    <!--===============-->
+    ===============
 
     <item>
         <rotate
@@ -41,7 +41,7 @@
             <shape android:shape="rectangle">
                 <corners android:radius="4dp" />
                 <padding android:bottom="1px" />
-                <solid android:color="#09000000" />
+                <solid android:color="@color/semitransparent_shadow_color" />
             </shape>
         </rotate>
     </item>
@@ -49,11 +49,11 @@
         <shape android:shape="rectangle">
             <corners android:radius="4dp" />
             <padding android:bottom="1px" />
-            <solid android:color="#09000000" />
+            <solid android:color="@color/semitransparent_shadow_color" />
         </shape>
     </item>
 
-    <!--===============-->
+    ===============
 
     <item>
         <rotate
@@ -67,7 +67,7 @@
                     android:bottom="1px"
                     android:left="1px"
                     android:right="1px" />
-                <solid android:color="#10000000" />
+                <solid android:color="@color/least_transparent_shadow_color" />
             </shape>
         </rotate>
     </item>
@@ -78,14 +78,14 @@
                 android:bottom="1px"
                 android:left="1px"
                 android:right="1px" />
-            <solid android:color="#10000000" />
+            <solid android:color="@color/least_transparent_shadow_color" />
         </shape>
     </item>
 
-    <!--===============-->
+    ===============
 
 
-    <!--ForeGround-->
+    ForeGround-->
 
     <item>
         <rotate
@@ -94,14 +94,14 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="#CBEBFC" />
+                <solid android:color="@color/accent2" />
             </shape>
         </rotate>
     </item>
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="#CBEBFC" />
-            <corners android:radius="4dp" />
+            <solid android:color="@color/accent2" />
+            <corners android:radius="14dp" />
         </shape>
     </item>
 
