--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -67,7 +67,7 @@
         android:id="@+id/interval_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/small_padding"
+        android:padding="@dimen/min_padding"
         android:layout_marginTop="@dimen/medium_padding"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toBottomOf="@+id/price_stat" >
@@ -79,8 +79,8 @@
             android:layout_gravity="end"
             android:text="1w"
             android:gravity="center"
-            android:padding="@dimen/small_padding"
-            android:layout_margin="@dimen/small_padding"
+            android:padding="@dimen/min_padding"
+            android:layout_margin="@dimen/min_padding"
             android:layout_width="50dp"
             android:background="@drawable/rounded_rectangle"
             app:layout_constraintTop_toTopOf="parent"
@@ -94,8 +94,8 @@
             android:layout_gravity="end"
             android:text="1m"
             android:gravity="center"
-            android:padding="@dimen/small_padding"
-            android:layout_margin="@dimen/small_padding"
+            android:padding="@dimen/min_padding"
+            android:layout_margin="@dimen/min_padding"
             android:layout_width="50dp"
             android:background="@drawable/rounded_rectangle"
 
@@ -109,8 +109,8 @@
             android:layout_gravity="end"
             android:text="3m"
             android:gravity="center"
-            android:padding="@dimen/small_padding"
-            android:layout_margin="@dimen/small_padding"
+            android:padding="@dimen/min_padding"
+            android:layout_margin="@dimen/min_padding"
             android:layout_width="50dp"
             android:background="@drawable/rounded_rectangle"
             app:layout_constraintTop_toTopOf="parent"
@@ -123,8 +123,8 @@
             android:layout_gravity="end"
             android:text="6m"
             android:gravity="center"
-            android:padding="@dimen/small_padding"
-            android:layout_margin="@dimen/small_padding"
+            android:padding="@dimen/min_padding"
+            android:layout_margin="@dimen/min_padding"
             android:layout_width="50dp"
             android:background="@drawable/rounded_rectangle"
             app:layout_constraintTop_toTopOf="parent"
@@ -137,8 +137,8 @@
                 android:layout_gravity="end"
                 android:text="Y"
                 android:gravity="center"
-                android:padding="@dimen/small_padding"
-                android:layout_margin="@dimen/small_padding"
+                android:padding="@dimen/min_padding"
+                android:layout_margin="@dimen/min_padding"
                 android:layout_width="50dp"
                 android:background="@drawable/rounded_rectangle"
                 android:textSize="@dimen/medium_text"
@@ -152,7 +152,7 @@
         android:id="@+id/chart_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/small_padding"
+        android:layout_marginTop="@dimen/min_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/interval_selector" />
 
