--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/dark"
+                android:background="@color/background1"
                 android:padding="12dp"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -38,7 +38,6 @@
                     android:layout_margin="0dp"
                     android:gravity="center"
                     android:maxWidth="240dp"
-                    android:textColor="@color/white"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/logo"
@@ -55,11 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:borderWidth="0dp"
-        android:backgroundTint="@color/medium"
+        android:backgroundTint="@color/background3"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="right|bottom"
         app:srcCompat="@drawable/icon_favorite"
-        app:tint="@android:color/white"
         android:contentDescription="@string/favorite"/>
 
     <androidx.core.widget.NestedScrollView
