--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,9 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Top gainers and losers"
-        android:textSize="18dp"
-        android:textColor="@color/white"
+        android:text="@string/top_gainers_and_losers"
+        android:textSize="18sp"
         android:gravity="center"
         android:paddingTop="12dp"
         android:paddingBottom="0dp"
@@ -27,13 +26,11 @@
         android:id="@+id/rv_headers"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/dark"
-        android:elevation="10dp"
+        android:background="@color/background1"
+        android:elevation="@dimen/small_padding"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@+id/main_header">
 
         <TextView
