--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -11,13 +11,13 @@
         android:id="@+id/saved_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark"
+        android:background="@color/background1"
         android:contentDescription="Saved coins"
         app:tabMode="fixed"
-        app:tabTextColor="@color/white"
-        app:tabIconTint="@color/light"
+        app:tabTextColor="@color/background8"
+        app:tabIconTint="@color/background8"
         app:tabBackground="@drawable/rounded_up_rectangle"
-        app:tabIndicatorColor="@color/light"
+        app:tabIndicatorColor="@color/background8"
         app:tabIndicatorFullWidth="true"
         />
 
