--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,15 +8,29 @@
     android:background="@drawable/settings_background_gradient"
     tools:context=".views.fragments.SettingsFragment">
 
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switch_element"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch text"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:useMaterialThemeColors="false"
+        app:thumbTint="@color/background1"
+        app:trackTint="@color/background8"
+        android:paddingHorizontal="@dimen/medium_padding"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch_element"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/lightAccent"
+        android:textColor="@color/accent1"
         android:textSize="36dp"
         android:text="SettingsFragment" />
 
