--- a/app/src/main/res/layout/saved_coin_header.xml
+++ b/app/src/main/res/layout/saved_coin_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
-    android:background="@color/medium"
+    android:background="@color/background3"
     android:orientation="horizontal"
     android:paddingStart="22dp"
     android:paddingTop="6dp"
@@ -119,11 +119,12 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:maxLines="1"
         android:rotation="-90"
-        android:textColor="@color/lightAccent"
         android:text="Type"
+        android:padding="0dp"
+        android:layout_margin="0dp"
         android:textAlignment="center"
-        android:textSize="11sp" />
+        android:textSize="10sp" />
 </LinearLayout>
