--- a/app/src/main/res/layout/saved_coin_item.xml
+++ b/app/src/main/res/layout/saved_coin_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
-    android:background="@color/dark"
+    android:background="@color/background1"
     android:orientation="horizontal"
     android:paddingStart="12dp"
     android:paddingTop="6dp"
@@ -111,11 +111,11 @@
         android:id="@+id/coin_type"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:layout_gravity="center_vertical|end"
         android:maxLines="1"
         android:padding="3dp"
-        android:textColor="@color/lightAccent"
+        android:textColor="@color/coinColor"
         android:textAlignment="viewEnd"
         android:textSize="14sp" />
 
