--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,17 @@
-<resources
-    xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Base.Theme.CryptoView" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="android:alertDialogStyle">@style/DialogStyle</item>
+        <item name="android:textAppearance">@style/CVTextAppearance</item>
+        <item name="android:textColor">@color/textColor</item>
+    </style>
+
+    <style name="CVTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/roboto</item>
+        <item name="android:textSize">12sp</item>
+        <item name="color">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorLink">@color/white</item>
     </style>
 
     <style name="TextViewStyle" parent="android:Widget.TextView">
@@ -17,19 +25,19 @@
     </style>
 
     <style name="DialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:background">@color/medium</item>
+        <item name="android:background">@color/background2</item>
         <item name="android:textColor">@color/white</item>
         <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
     </style>
 
     <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/dark</item>
+        <item name="backgroundTint">@color/background1</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/dark</item>
+        <item name="backgroundTint">@color/background1</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
