--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="grey">#808080</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="dark">#001610</color>
-    <color name="dark_transparent">#20003320</color>
-    <color name="darkAccent">#400000</color>
-    <color name="medium">#003823</color>
-    <color name="mediumAccent">#800000</color>
-    <color name="light">#00FFA0</color>
-    <color name="lightAccent">#FFA0A0</color>
+    <color name="green">#008000</color>
+    <color name="red">#FF0000</color>
 
-    <color name="menu_item_color">#FFFFFF</color>
+
+    <color name="background1">@color/white</color>
+    <color name="background2">#cffaef</color>
+    <color name="background2Transparent">#20055741</color>
+    <color name="background3">#9ef0da</color>
+    <color name="background4">#6fdec0</color>
+    <color name="background5">#47c4a3</color>
+    <color name="background6">#26a382</color>
+    <color name="background7">#118062</color>
+    <color name="background8">#055741</color>
+
+    <color name="accent1">#fadbcf</color>
+    <color name="accent2">#f0b49e</color>
+    <color name="accent3">#de8d6f</color>
+    <color name="accent4">#c46847</color>
+    <color name="accent5">#a34726</color>
+    <color name="accent6">#802e11</color>
+    <color name="accent7">#571b05</color>
+    <color name="accent8">#2b0c01</color>
+
+    <color name="iconColor">@color/background8</color>
+    <color name="coinColor">#b99800</color>
+    <color name="menu_item_color">@color/black</color>
+    <color name="lineColor">@color/iconColor</color>
+    <color name="textColor">@color/black</color>
+
+    <color name="transparent_shadow_color">#01000000</color>
+    <color name="semitransparent_shadow_color">#09000000</color>
+    <color name="least_transparent_shadow_color">#10000000</color>
 </resources>
