--- a/app/src/main/res/xml/line_point_formatter_with_labels.xml
+++ b/app/src/main/res/xml/line_point_formatter_with_labels.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <config
     linePaint.strokeWidth="5dp"
-    linePaint.color="@color/light"
+    linePaint.color="@color/lineColor"
     vertexPaint.color="#007700"
     vertexPaint.strokeWidth="0dp"
     fillPaint.color="#00000000"
