--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,10 +27,13 @@
     <color name="accent8">#2b0c01</color>
 
     <color name="iconColor">@color/background8</color>
-    <color name="coinColor">#b99800</color>
+    <color name="iconColor2">@color/background6</color>
     <color name="menu_item_color">@color/black</color>
-    <color name="lineColor">@color/iconColor</color>
+    <color name="lineColor">@color/background8</color>
     <color name="textColor">@color/black</color>
+
+    <color name="coinColor">#b99800</color>
+    <color name="tokenColor">#303030</color>
 
     <color name="transparent_shadow_color">#01000000</color>
     <color name="semitransparent_shadow_color">#09000000</color>
