--- a/app/src/main/res/drawable/icon_chart.xml
+++ b/app/src/main/res/drawable/icon_chart.xml
@@ -1,12 +1,9 @@
-<vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
-    android:width="24dp">
-
-    <path
-        android:fillColor="@color/iconColor"
-        android:pathData="M4.2,17.78l5.3,-5.3 3.25,3.25c0.41,0.41 1.07,0.39 1.45,-0.04l7.17,-8.07c0.35,-0.39 0.33,-0.99 -0.04,-1.37 -0.4,-0.4 -1.07,-0.39 -1.45,0.04l-6.39,7.18 -3.29,-3.29c-0.39,-0.39 -1.02,-0.39 -1.41,0l-6.09,6.1c-0.39,0.39 -0.39,1.02 0,1.41l0.09,0.09c0.39,0.39 1.03,0.39 1.41,0z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="800dp"
+    android:height="800dp"
+    android:viewportWidth="256"
+    android:viewportHeight="256">
+  <path
+      android:pathData="M232,208a8,8 0,0 1,-8 8h-192a8,8 0,0 1,-8 -8V48a8,8 0,0 1,16 0V156.69l50.35,-50.35a8,8 0,0 1,11.31 0l26.34,26.34L176.69,84 162.35,69.66A8,8 0,0 1,168 56h40a8,8 0,0 1,8 8v40a8,8 0,0 1,-13.66 5.66L188,95.31l-54.34,54.34a8,8 0,0 1,-11.31 0L96,123.31l-56,56V200h184A8,8 0,0 1,232 208Z"
+      android:fillColor="@color/iconColor"/>
 </vector>
