--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,40 +9,49 @@
     android:background="@drawable/background_gradient45"
     tools:context=".views.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="0dp"
-        android:layout_margin="0dp"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/app_bar_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="0dp"-->
+<!--        android:layout_margin="0dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/top_app_bar"
-            android:layout_width="match_parent"
-            android:elevation="10dp"
-            android:layout_height="48dp"
-            android:padding="0dp"
-            app:title="@string/app_name"
-            app:titleMargin="0dp"
-            android:layout_margin="0dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            app:titleTextColor="@color/background8"
-            app:subtitleTextColor="@color/background5"
-            android:backgroundTint="@color/background2"
-            app:menu="@menu/menu_toolbar"
-            android:background="@color/background1"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary" />
+<!--        <com.google.android.material.appbar.MaterialToolbar-->
+<!--            android:id="@+id/top_app_bar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:elevation="10dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:padding="0dp"-->
+<!--            app:title="@string/app_name"-->
+<!--            app:titleMargin="0dp"-->
+<!--            android:layout_margin="0dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center"-->
+<!--            app:titleTextColor="@color/background8"-->
+<!--            app:subtitleTextColor="@color/background5"-->
+<!--            android:backgroundTint="@color/background2"-->
+<!--            app:menu="@menu/menu_toolbar"-->
+<!--            android:background="@color/background1"-->
+<!--            style="@style/Widget.MaterialComponents.Toolbar.Primary" />-->
 
-    </com.google.android.material.appbar.AppBarLayout>
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
     <FrameLayout
         android:id="@+id/fragment_placeholder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
+        app:menu="@menu/menu_navigation"
+        />
 
     <ProgressBar
         android:id="@+id/progress_bar"
