--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -11,6 +11,7 @@
         android:id="@+id/container_answer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:paddingTop="@dimen/medium_padding"
         android:contentDescription="@string/ai_chat_hint"
         app:layout_constraintBottom_toTopOf="@+id/container_question"
         app:layout_constraintTop_toTopOf="parent">
