--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -5,21 +5,27 @@
     <item
         android:id="@+id/main"
         android:enabled="true"
-        android:icon="@drawable/icon_home"
+        android:icon="@drawable/icon_home2"
         android:title="@string/menu_text_home"/>
     <item
         android:id="@+id/favorites"
         android:enabled="true"
-        android:icon="@drawable/icon_favorite"
+        android:icon="@drawable/icon_star_menu"
         android:title="@string/menu_text_favorites"/>
     <item
         android:id="@+id/search"
         android:enabled="true"
-        android:icon="@drawable/icon_search"
+        android:icon="@drawable/icon_search2"
         android:title="@string/menu_text_search"/>
+    <item
+        android:id="@+id/chat"
+        android:enabled="true"
+        android:icon="@drawable/icon_chatbot"
+        android:title="@string/menu_text_chat"/>
     <item
         android:id="@+id/settings"
         android:enabled="true"
-        android:icon="@drawable/icon_settings"
+        android:icon="@drawable/icon_settings2"
         android:title="@string/menu_text_settings"/>
+
 </menu>
