--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,6 +4,7 @@
         <item name="android:alertDialogStyle">@style/DialogStyle</item>
         <item name="android:textAppearance">@style/CVTextAppearance</item>
         <item name="android:textColor">@color/textColor</item>
+        <item name="bottomNavigationStyle">@style/BottomBar</item>
     </style>
 
     <style name="CVTextAppearance" parent="TextAppearance.AppCompat">
@@ -24,21 +25,27 @@
         <item name="android:layout_marginBottom">0dp</item>
     </style>
 
-    <style name="DialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="BottomBar" parent="Widget.Material3.BottomNavigationView">
+        <item name="android:background">@color/background1</item>
+        <item name="itemTextColor">@color/iconColor</item>
+        <item name="itemIconTint">@color/iconColor</item>
+    </style>
+
+    <style name="DialogStyle" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="android:background">@color/background2</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
     </style>
 
     <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="backgroundTint">@color/background1</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/textColor</item>
     </style>
 
     <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="backgroundTint">@color/background1</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/textColor</item>
     </style>
 
     <style name="Theme.CryptoView" parent="Base.Theme.CryptoView" />
