Ai chat added. Day/Night themes configurated Icons changed. polished themes and styles. Switched back to BottomNavigationBar

--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -42,7 +42,7 @@
             android:background="@color/background1"
             android:hint="@string/ai_chat_hint"
             android:imeOptions="actionSend"
-            android:inputType="textMultiLine"
+            android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
             android:maxLines="5"
             android:padding="@dimen/medium_padding"
             android:scrollbars="none"
